# supermart_ng_price_tracker

./: .gitignore  README.md  pyproject.toml  run_pipeline.sh  scrapy.cfg
.github/workflows/: scrape.yml
airflow/dags/: retail_pipeline.py
data/quarantine/: rejected.json
dbt/supermart_dbt/: dbt_project.yml
dbt/supermart_dbt/models/marts/: fct_price_history.sql  product_prices.sql
dbt/supermart_dbt/models/staging/: stg_products.sql
src/jobs/: load_to_bigquery.py  upload_to_gcs.py
src/scraper/: items.py  models.py  output.csv  settings.py
src/scraper/data/raw/: products_20260618_112121.parquet  products_20260622_112601.parquet
src/scraper/parsers/: product_parser.py
src/scraper/pipelines/: parquet_pipeline.py  product_validation.py
src/scraper/spiders/: supermart_spider.py
src/storage/: gcs_storage.py
src/utils/: logger.py
src/warehouse/: bigquery.py
tests/: test_parser.py  test_validation.py
